--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
   academic and industry. -->
 
   <br /><br />
-  Currently, I'm building with the team at <a href="https://sprout.place">Sprout</a> on a new product; it'll enable us to create anesthetic video experiences. I strongly believe
+  Currently, I'm building a new product with the team at <a href="https://sprout.place">Sprout</a>; it'll enable us to create anesthetic video experiences. I strongly believe
   computing environments can be and should be more fluid, playful,
   and expressive. Before this, I built small products at
   <a href="http://tinyfactories.space">Tiny Factories</a> and researched computing as a medium at <a href="http://dynamicland.org">Dynamicland</a>.
@@ -30,7 +30,7 @@ Currently, I'm adjusting to my post-college life. I'm trying to understand <i>ho
 
   More than half a decade ago, I gave a talk on the "Space" of Computing: how our conception of "computing" has
   has been changing and <i>continues</i> to change. You can watch it
-  <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a> and the paper I
+  <a href="https://www.youtube.com/watch?v=nVFS85Zx6uw">here</a> and read the paper I
   co-authored
   <a href="https://jods.mitpress.mit.edu/pub/6pewbpry/release/1">here</a>.
 
