--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
   academic and industry. -->
 
   <br /><br />
-  Currently, I'm building a new product with the team at <a href="https://sprout.place">Sprout</a>; it'll enable us to create anesthetic video experiences. I strongly believe
+  Currently, I'm building a new product with the team at <a href="https://sprout.place">Sprout</a>; it'll enable us to create synaesthetic video experiences. I strongly believe
   computing environments can be and should be more fluid, playful,
   and expressive. Before this, I built small products at
   <a href="http://tinyfactories.space">Tiny Factories</a> and researched computing as a medium at <a href="http://dynamicland.org">Dynamicland</a>.
